GNOME Bugzilla – Bug 612488
Does not compile with -DGSEAL_ENABLED
Last modified: 2010-03-17 18:46:27 UTC
This module does not build with -DGSEAL_ENABLED. See http://live.gnome.org/GnomeGoals/UseGseal . Note that maybe this report cannot be fixed yet, as GTK+ still misses some accessor functions (see bug 588389, bug 597610) needed for sealing. Also see http://live.gnome.org/GTK%2B/3.0/PendingSealings for current status. The jhbuild output posted here of course only lists the very first error when trying to compile. gkbd-indicator.c: In function ‘gkbd_indicator_button_pressed’: gkbd-indicator.c:255: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:255: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c: In function ‘flag_exposed’: gkbd-indicator.c:272: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:273: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:274: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:275: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:278: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:279: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:287: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:288: error: ‘GtkWidget’ has no member named ‘allocation’ gkbd-indicator.c:295: error: ‘GtkWidget’ has no member named ‘window’ make[3]: *** [libgnomekbdui_la-gkbd-indicator.lo] Error 1 make[3]: Leaving directory `/home/andre/svn-gnome/libgnomekbd/libgnomekbd' make[2]: *** [all] Error 2
fixed in git. please check.
Confirming it's fixed by http://git.gnome.org/browse/libgnomekbd/commit/?id=27532779bebfec737a5594438470d1851f451496 . Thanks for the fast response!
Hello Sergey, you should bump the GTK+ required version to >= 2.18
gtk version bumped.