Fixing the issues with -DSEAL_ENABLED

https://bugzilla.gnome.org/show_bug.cgi?id=612488